<resources>
    <string name="app_name">Practica2_k</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_calculadora">Calculadora Simple</string>
    <string name="titulocalculadora">Calculadora Simple</string>
    <string name="CalculadoraN1">Número 1:</string>
    <string name="calcN2">Número 2</string>
    <string name="calcBotonLimpiar">Limpiar</string>
    <string name="resultado">RESULTADO</string>
    <string name="title_activity_agenda">Agenda</string>
    <string name="Contacto">Nuevo Contacto</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellidos">Apellidos</string>
    <string name="email">e-mail:</string>
    <string name="telefono">Teléfono</string>
    <string name="Notas">Notas</string>
    <string name="Aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="salir">Salir</string>
    <string name="intercambia">Intercambia</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_agenda_tabla">Agenda Tabla</string>
    <string name="minombre">Jose Antonio López de Merlo</string>
    <string name="ejercicio1">Agenda</string>
    <string name="ejercicio2">Agenda-Constraint</string>
    <string name="ejercicio3">Agenda Tabla</string>
    <string name="ejercicio4">Calculadora Grid</string>
    <string name="receta">Receta</string>
    <string name="descripcion">Descripción</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="receta2">Receta</string>
</resources>