<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecetaActivity">

    <ImageView
        android:id="@+id/ivReceta"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription=""
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/receta"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:numStars="5"
        android:rating="3.5"
        app:layout_constraintBottom_toBottomOf="@+id/ivReceta"
        app:layout_constraintRight_toRightOf="@+id/ivReceta"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/tvAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="Jose Antonio López"
        android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
        tools:text="Jose Antonio López" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="Lubina al horno con verduras"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:textStyle="italic"
        android:typeface="serif"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Lubina al horno con verduras" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/descripcion"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="DescripcionLorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis eros a ex sollicitudin tincidunt id vitae neque. Etiam non eros sodales, dignissim arcu in, fringilla ipsum. Cras congue fermentum lorem et eleifend. Morbi mattis facilisis tincidunt. "
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis eros a ex sollicitudin tincidunt id vitae neque. Etiam non eros sodales, dignissim arcu in, fringilla ipsum. Cras congue fermentum lorem et eleifend. Morbi mattis facilisis tincidunt. " />

    <TextView
        android:id="@+id/tvIngredientes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="8dp"
        android:text="Ingredientes: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis eros a ex sollicitudin tincidunt id vitae neque. Etiam non eros sodales, dignissim arcu in, fringilla ipsum. Cras congue fermentum lorem et eleifend. Morbi mattis facilisis tincidunt. "
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis eros a ex sollicitudin tincidunt id vitae neque. Etiam non eros sodales, dignissim arcu in, fringilla ipsum. Cras congue fermentum lorem et eleifend. Morbi mattis facilisis tincidunt. " />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ingredientes"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/receta2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/tvReceta"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"

        android:layout_marginBottom="8dp"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:text="Receta:Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis eros a ex sollicitudin tincidunt id vitae neque. Etiam non eros sodales, dignissim arcu in, fringilla ipsum. Cras congue fermentum lorem et eleifend. Morbi mattis facilisis tincidunt. Proin placerat libero at lorem ullamcorper, imperdiet volutpat sapien luctus. Nunc nibh velit, finibus eu quam non, consectetur porttitor enim. Donec tincidunt sem nec lectus blandit, at consectetur metus suscipit.  Quisque mi metus, iaculis mattis libero nec, ornare porttitor odio. Proin maximus molestie libero at rutrum. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed hendrerit rhoncus nulla sit amet cursus. Morbi et scelerisque neque. Fusce congue, nibh quis scelerisque ultricies, nisi leo pellentesque metus, id pulvinar dui risus in ex. Donec congue, sapien sit amet ultrices maximus, mauris massa finibus eros, faucibus faucibus risus urna a diam. Suspendisse nec erat convallis ante viverra accumsan sit amet sed neque. In vitae tellus ante."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis eros a ex sollicitudin tincidunt id vitae neque. Etiam non eros sodales, dignissim arcu in, fringilla ipsum. Cras congue fermentum lorem et eleifend. Morbi mattis facilisis tincidunt. Proin placerat libero at lorem ullamcorper, imperdiet volutpat sapien luctus. Nunc nibh velit, finibus eu quam non, consectetur porttitor enim. Donec tincidunt sem nec lectus blandit, at consectetur metus suscipit.  Quisque mi metus, iaculis mattis libero nec, ornare porttitor odio. Proin maximus molestie libero at rutrum. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed hendrerit rhoncus nulla sit amet cursus. Morbi et scelerisque neque. Fusce congue, nibh quis scelerisque ultricies, nisi leo pellentesque metus, id pulvinar dui risus in ex. Donec congue, sapien sit amet ultrices maximus, mauris massa finibus eros, faucibus faucibus risus urna a diam. Suspendisse nec erat convallis ante viverra accumsan sit amet sed neque. In vitae tellus ante." />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="150dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4991708" />
</androidx.constraintlayout.widget.ConstraintLayout>